--- a/index.html
+++ b/index.html
@@ -9,10 +9,10 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
   <!-- import the webpage's stylesheet -->
-  <link rel="stylesheet" href="/main.css">
+  <link rel="stylesheet" href="main.css">
 
   <!-- import the webpage's javascript file -->
-  <script src="/script.js" defer>
+  <script src="script.js" defer>
   </script>
 </head>
 
